--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
 #home{
   height: 100dvh;
   background: url(Asset/landingbg.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -83,6 +86,9 @@
 }
 #about-container {
   background-image: url(Asset/bg1.png);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -134,6 +140,9 @@
 #skill-container {
   width: 100%;
   background-image: url(Asset/bg3.png);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -179,6 +188,9 @@
 }
 #porta-contenedor {
   background-image: url(Asset/bg4.png);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -240,6 +252,9 @@
 
 footer {
   background: url(Asset/bg2.png);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
