text color changed

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 100%;
 }
+.title{
+  color: white;
+  font-weight: bold;
+}
+.text{
+  color:rgb(255 255 255 / .75);
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
