--- a/src/Components/Certificate-badge/Certificate.css
+++ b/src/Components/Certificate-badge/Certificate.css
@@ -9,7 +9,7 @@
     justify-content: center;
     backdrop-filter: blur(10px);
     transition: 0.5s ease-in-out;
-    box-shadow: rgba(255, 255, 255, 0.1) 0px 4px 12px;
+    box-shadow: rgba(92, 240, 248, 0.6) 0px 0px 12px 1.2px;
     margin: 0.625rem;
     border: 2px solid;
     border-color: #71bef2 #31acff #1172b2 #31acff;
