--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,7 @@
   max-width: 50rem;
   display: flex;
   place-items: center;
+  gap: 10px;
   flex-direction: column;
   padding: 1rem 0;
 }
@@ -179,7 +180,7 @@
   align-items:center;
   justify-content: center;
   flex-direction: column;
-  padding: 1.25rem;
+  padding: 1.25rem 1.25rem 4.5rem 1.25rem;
   width: 100%;
   max-width:90rem;
   margin:0 auto;
@@ -324,7 +325,6 @@ footer {
     margin: 0 auto;
   }
   .playlist-text{
-    font-size: 1.2em;
     padding: 1.2rem 0;
   }
   .porta-items {
@@ -346,6 +346,9 @@ footer {
   }
 }
 @media only screen and (min-width: 1024px) {
+  #about-container{
+    height: auto;
+  }
   #home-container{
     flex-direction:row-reverse;
     justify-content: space-evenly;
@@ -368,9 +371,14 @@ footer {
     display: flex;
     padding: 3.125rem;
     justify-content: center;
+    gap:20px;
+  }
+
+  .title{
+    font-size: 1em;
   }
   .skill-items{
-    padding: 5rem 5rem 10.5rem 5rem;
+    padding: 5rem 5rem 4.5rem 5rem;
   }
   
   .about-text{
@@ -399,29 +407,34 @@ footer {
 @media only screen and (min-width: 1200px) {
   .about-items {
     flex-direction: row;
+    display: flex;
     justify-content: center;
     align-items: center;
-    justify-content: space-evenly;
-
+    height: 100vh;
   }
   .about-img {
     width: 27em;
     border-radius: 20px;
-    height: 80dvh;
+    height: 100%;
     max-height: 50rem;
     padding: 0 0 0 0;
     margin: 0;
     align-self: stretch;
   }
   .about-left{
-    height: 80dvh;
-    max-height: 50rem;
+    height: auto;
+    padding: 0 0.4rem;
+  }
+  .about-img-container{
+    height: 100%;
+  }
+  .about-text{
+    padding: 2rem 0 3rem 0;
   }
 }
 
 @media (width > 1440px) {
   .playlist{
-    flex-direction: row;
     gap: 2rem;
   }
   .together-left{
