--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,6 @@
   width: 15.625rem;;
   height: 15.625rem;
   border-radius: 50%;
-  backdrop-filter: blur(6.25rem);
   object-fit:cover;
   object-position: 50% 0%;
   background: transparent;
@@ -361,9 +360,10 @@ footer {
   }
   .home-img{
     border-radius: 10px;
-    width: 18.75rem;
+    width: 20.75rem;
     height: auto;
     box-shadow: 0px 0px 25px hsl(0, 0%, 13%);
+    mask-image: linear-gradient(black 60%, transparent)
   }
   .about-items{
     height: 100%;
@@ -420,7 +420,9 @@ footer {
     padding: 0 0 0 0;
     margin: 0;
     align-self: stretch;
+    backdrop-filter:none;
   }
+  
   .about-left{
     height: auto;
     padding: 0 0.4rem;
